# fibresim

./: .gitignore  README.md  main.py  pyproject.toml
simulator/: datagen.py  fibres.py
simulator/dsp/: algorithms.py  utils.py
